test/bad/dictionaries/decl03.px

d1 = {0: ""}
{Float:String} d2 = d1
